<package format="2">
  <name>wrpps</name>
  <version>0.1.0</version>
  <description>Metapackage for WrPPS System</description>
  <maintainer email="dev@opensource-rotobics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>wrpps_driver</exec_depend>
  <exec_depend>wrpps_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>