<package format="2">
  <name>wrpps_msgs</name>
  <version>0.1.0</version>
  <description>Messages for WRPPS driver</description>
  <maintainer email="dev@opensource-rotobics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
</package>